--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -21,7 +21,7 @@
 40    IF    A=2   ?”KUMORI”
 50    IF    A=3   ?”YUKI”
     
-/div>
+</div>
 </section>
 
 
@@ -33,9 +33,9 @@ F5で占ってみよう！
 
 <section>
 <b>やってみよう！</b><br>
-1. STEPのかずをもっとちいさくしてみるとどうなるかな？<br>
-2. DRAWのI*のよこのかずをかえてみよう<br>
-3. くふうしてもじやえをかいてみよう！<br>
+1. 30の雪を台風に変えてみよう！<br>
+2. 天気の種類を増やしてみよう！（RNDや60）<br>
+3. 工夫しておみくじやラッキーカラー占いを作ってみよう！<br>
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="http://ichigojam.net/print/">IchigoJamプリント</a> http://ichigojam.net/print/ 
