--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -33,7 +33,7 @@ F5で占ってみよう！
 
 <section>
 <b>やってみよう！</b><br>
-1. 30の雪を台風に変えてみよう！<br>
+1. 雪を台風に変えてみよう！<br>
 2. 天気の種類を増やしてみよう！（RNDや60）<br>
 3. 工夫しておみくじやラッキーカラー占いを作ってみよう！<br>
 </section>
