--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -4,11 +4,10 @@
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>Test テスト　DRAW</h1>
-
-
+<h1>Test テスト　DRAW</h1><br>
+インベーダーゲーム<br>
+<br>
 <section>
-変数でユニットをコントロールするぞ！
 X＝〇で変数を定義できるぞ！
 <div class=ichigojam>LOCATE　X，Y</div>
 ユニットの位置を決定するぞ！<br>
@@ -18,6 +17,7 @@ X＝〇で変数を定義できるぞ！
 
 <section>
 ユニットの位置を決めよう。
+変数でユニットをコントロールするぞ！
 LOCATE　X,Yで位置を決められるぞ！
 <div class=ichigojam>X＝１５：Y＝２２</div>
 変数の値を決定するぞ！<br>
