--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -27,16 +27,16 @@ Xに１５、Yに２が代入されたぞ。<br>
 
 
 <section>
-FORコマンドでくりかえしせんをかこう！
-<div class=ichigojam>10 FOR I=1TO11 STEP 3:DRAW I,1,i*10,70:NEXT
+動かしてみよう！
+<div class=ichigojam>１１０　IF　BTN（LEFT）＝１　THEN　X＝Xー1<br>
 </div>
-RUNでじっこうしてみると、どうなるかな？
-</section>
-
-<section>
-brコマンドで改行してみよう！<br>
-<div class=ichigojam>10 FOR I=1TO10 STEP 3:DRAW I*10,1,10*I,70:NEXT
-20 FOR I=2TO8 STEP 3:DRAW 1,I*5,70,i*5:NEXT</div>
+BTN（〇〇）＝でボタンの種類を決めるぞ！<br>
+更にIFをつけてボタンが押されているかを確認しよう。<br>
+＝１なら押されているということだ。<br>
+THEN　〇〇でIFの内容が成り立つ時に何をするのかを決められるぞ！<br>
+X=Xー1ならXがい１ずつ減るということだ。<br>
+ユニットの位置はXで決められているから、これで左矢印ボタンが押されている間<br>
+ユニットが左に動くようになるぞ！
 </section>
 
 
