--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -8,9 +8,10 @@
 
 
 <section>
-がめんにせんをかいてみよう！
-DRAWコマンドでせんをかくことができるよ
-<div class=ichigojam>DRAW 1,1,70,70</div>
+ボタンを押してゲームスタート！
+<div class=ichigojam>1 ?"MOJI JIKAN SOKUTEI"
+    10 CLT
+    20 IF INKEY()=0 GOTO 20</div>
 ２つばしょをしていしてあげよう<br>
 さいしょの1,1でさいしょのばしょ。<br>
 つぎの70,70,でつぎのばしょをしていしよう。
