--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -8,7 +8,7 @@
 
 
 <section>
-ボタンを押してゲームスタート！
+時間をリセットしてゲームスタート！
 <div class=ichigojam>1 ?"MOJI JIKAN SOKUTEI"
     10 CLT
     20 IF INKEY()=0 GOTO 20</div>
