--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -12,15 +12,12 @@
 <div class=ichigojam>10 ?"MOJI JIKAN SOKUTEI"
 20 CLT
 30 IF INKEY()=0 GOTO 20</div>
-２つばしょをしていしてあげよう<br>
-さいしょの1,1でさいしょのばしょ。<br>
-つぎの70,70,でつぎのばしょをしていしよう。
 </section>
     
 
 <section>
 ばしょのつぎに0とくわえると、せんをけせるよ。
-<div class=ichigojam>DRAW 1,1,70,70,0</div>
+<div class=ichigojam>40 INPUT A</div>
 うえのほうのもじがきえたかな？
 </section>
 
