--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -16,9 +16,9 @@
     
 
 <section>
-ばしょのつぎに0とくわえると、せんをけせるよ。
+名前や文章を打ってみよう。
 <div class=ichigojam>40 INPUT A</div>
-うえのほうのもじがきえたかな？
+綴りは合っているかな？
 </section>
 
 
