--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -16,23 +16,23 @@
     
 
 <section>
-名前や文章を打ってみよう。
+名前や文章を打ってみよう！
 <div class=ichigojam>40 INPUT A</div>
 綴りは合っているかな？
 </section>
 
 
 <section>
-FORコマンドでくりかえしせんをかこう！
-<div class=ichigojam>10 FOR I=1TO11 STEP 3:DRAW I,1,i*10,70:NEXT
-</div>
-RUNでじっこうしてみると、どうなるかな？
+時間を測定しよう！
+<div class=ichigojam>50 ?TICK()/60</div>
+どれくらいの文字を何秒で打てるかな？
 </section>
 
 <section>
-FORコマンドをふたつかいて＃をかいてみよう！
-<div class=ichigojam>10 FOR I=1TO10 STEP 3:DRAW I*10,1,10*I,70:NEXT
-20 FOR I=2TO8 STEP 3:DRAW 1,I*5,70,i*5:NEXT</div>
+結果を見てみよう！
+<div class=ichigojam>60 IF INKEY()=1 GOTO 40</div>
+ボタンを押して結果を出して見よう。
+何秒だったかな？
 </section>
 
 
