--- a/ja/ABILITY TEST.html
+++ b/ja/ABILITY TEST.html
@@ -31,7 +31,7 @@
 <section>
 結果を見てみよう！
 <div class=ichigojam>60 IF INKEY()=1 GOTO 40</div>
-ボタンを押して結果を出して見よう。
+ボタンを押して結果を出して見よう.
 何秒だったかな？
 </section>
 
