--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -1,29 +1,31 @@
 
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>たくさん数字を表示させて、ハッカー気分になろう PRINT</title>
+<title>数字の滝を表示させてハッカー気分 PRINT/WAIT/RND</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
-https://twitter.com/luca_3am/status/1168519292112920576?s=20
+
 <h1>数字を表示させよう！</h1>
 
 
 <section>
-がめんに何かを表示させるには、「PRINT」 を使うよ
+何かを表示させるには、「PRINT」 を使う
 <div class=ichigojam>PRINT 1</div>
 このままだと、数字が1つ表示されるだけでおわってしまう。<br>
 ということで、もう一行かいていこう<br>
- <div class=ichigojam>1 PRINT 1</div> <br>
- <div class=ichigojam>2 PRINT 2</div> <br>
-しかし、こう書いてしまうとすぐに2つめが表示されてしまい、つまらない。<br>
-たきのように流れる数字を見たくない？
+ <div class=ichigojam>1 PRINT 1<br>
+ 2 PRINT 2</div><br>
+しかし、こう書いてしまうとすぐに2つめが表示されてしまう。滝ように流れてるとはいえない。<br>
+と、いうわけでちょっと待ってもらおう。
 </section>
     
 
 <section>
-ばしょのつぎに0とくわえると、せんをけせるよ。
-<div class=ichigojam>DRAW 1,1,70,70,0</div>
-うえのほうのもじがきえたかな？
+「WAIT」コマンドを使うと次の行に行くまで待たせる事ができる。今回は100にしよう。（WAIT 60で1秒待ってくれる）
+<div class=ichigojam>1 PRINT 1<br>
+2 WAIT 100
+3 PRINT 2</div>
+少し遅れて表示されただろう。
 </section>
 
 
