--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -36,10 +36,10 @@
 </section>
 
 <section>
-<b>やってみよう！</b><br>
-1. STEPのかずをもっとちいさくしてみるとどうなるかな？<br>
-2. DRAWのI*のよこのかずをかえてみよう<br>
-3. くふうしてもじやえをかいてみよう！<br>
+<b>最後に</b><br>
+1. 最後のページは、もちろんあの言葉！<br>
+2. 出来上がったら焦らずに、RUNを押して確認だ！<br>
+3. 最終確認が終わったらichigoDakeを渡そう！<br>
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="http://ichigojam.net/print/">IchigoJamプリント</a> http://ichigojam.net/print/ 
