誤字修正、表現変更 多分おわり？

--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -37,16 +37,16 @@ PRINT 2
 WATI 90
 PRINT 3
 WAIT 80
-PTINT 4
+PRINT 4
  …
 </div>
 WAITの時間を10づつ減らして少しずつ早く表示させてみよう
 </section>
 
 <section>
-何回も書いていってもキリがないし、WAITの時間も0になった。<br>
-と、いうわけで「FOR」を使って繰り返しにしよう。<br>
-さらに、数字をランダムに表示させてハッカーぽくしてみよう
+PRINT10まで書いてくともう早くしようがない。<br>
+「FOR」を使って繰り返しにしよう。<br>
+さらに、数字をランダムに表示してみよう
 <div class=ichigojam>PRINT RND(99)+1
 GOTO XX</div>
 GOTOには行数字を。
