ファイル名変更、いまだに誤植があったので修正 誤字ファック！

--- a/littlehacker.html
+++ b/littlehacker.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>数字の滝を表示させてハッカー気分</title>
+<title>数字の滝でハッカー気分</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>数字を表示させよう！</h1>
+<h1>数字の滝でハッカー気分</h1>
 
 
 <section>
@@ -45,7 +44,7 @@ WAITの時間を10づつ減らして少しずつ早く表示させてみよう
 
 <section>
 PRINT10まで書いてくともう早くしようがない。<br>
-「FOR」を使って繰り返しにしよう。<br>
+「GOTO」を使って繰り返しにしよう。<br>
 さらに、数字をランダムに表示してみよう
 <div class=ichigojam>PRINT RND(99)+1
 GOTO XX</div>
@@ -55,9 +54,9 @@ GOTOには行数字を。
 
 <section>
 <b>やってみよう！</b><br>
-1. なぜ、RNDが+1なのか説明してみよう<br>
-2. PRINTするものを文字にしてみよう<br>
-3. WAITの時間を自分好みにしてみよう<br>
+1. なぜ、RNDに+1をするのか説明してみよう<br>
+2. WAITの時間を自分好みにしてみよう<br>
+3. 他のコマンドでもっとスマートに書いてみよう<br>
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="http://ichigojam.net/print/">IchigoJamプリント</a> http://ichigojam.net/print/ 
