--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -29,7 +29,7 @@ INPUT（インプット）コマンドをつかって、
    <section> 
 もし、21じ＝AM9じになったらこう表示しよう。　
 <div class=ichigojam>50 IF A=21 ?"MOU9JI!"</div>
-おとなにおこられるよ！もうねよう。
+おきていると、おとなにおこられるよ！もうねよう。
     </section>
    
     
@@ -47,12 +47,12 @@ INPUT（インプット）コマンドをつかって、
 </section>
 
 <section>
-<br>
-えいごであいさつをかこう！4つにわけてみよう。
+もうひとくふう！ えいごであいさつをかこう！
 <div class=ichigojam>80 IF (A=6 OR A=7 OR A=8 OR A=9 OR A=10 OR A=11) AND S=0 ?"GOOD MORNING!"
 90 IF (A=12 OR A=13 OR A=１４ OR A=15 OR A=16 OR A=17) AND S=1 ?"GOOD AFTERNOON！🍙"
 100 IF (A=18 OR A=19 OR A=20) AND S=2 ?"GOOD EVENING:)"
 110 IF (A=21 OR A=22 OR A=23) AND S=3 ?"GOOD NIGHT!🚀"</div>
+   えいごであいさつ、できたかな？
 </section>
 
 
