--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -4,11 +4,11 @@
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>はすのはなをえがこう！DRAW</h1>
+<h1>はすのはなをえがこう！</h1>
 
 
 <section>
-DRAWコマンドでせんをひいてはなをかいてみよう！
+DRAWコマンドでせんをひいて、はなをかいてみよう！
 <div class=ichigojam>5 CLS:X=1:A=0</div>
 まずはじゅんびから。<br>
 じっこうするたびにがめんをきれいにして、ついでにへんすうもせっていしよう。<br>
