--- a/ja/index.html
+++ b/ja/index.html
@@ -23,7 +23,7 @@ body {
 
 <div id="main">
 <section>
-  - <a href=TEST2.html>テスト TEST</a><br>
+  - <a href=AISATSU.html>テスト TEST</a><br>
 プログラミングコース<br>
 - <a href=LED.html>ひかりをあやつる LED</a><br>
 - <a href=WAIT.html>じかんをあやつる WAIT</a><br>
