--- a/ja/index.html
+++ b/ja/index.html
@@ -23,7 +23,7 @@ body {
 
 <div id="main">
 <section>
-	<a href=TEST.html>fortest</a><br>
+	<a href=DRAWFLOWER.html>fortest</a><br>
 プログラミング コース<br>
 - <a href=LED.html>ひかりをあやつる LED</a><br>
 - <a href=WAIT.html>じかんをあやつる WAIT</a><br>
