--- a/ja/AISATSU.html
+++ b/ja/AISATSU.html
@@ -27,7 +27,7 @@ INPUT（インプット）コマンドをつかって、
     
     
    <section> 
-もし、21じ＝AM9じになったらこう表示しよう。　
+もし、21じ＝AM9じになったらこうひょうじしよう。　
 <div class=ichigojam>50 IF A=21 ?"MOU9JI!"</div>
 おきていると、おとなにおこられるよ！もうねよう。<br>
     </section>
