文字変える

--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>がめんにいたずらしてみよう！　DRAW</title>
+<title>でんたくを作ろう！　INPUT</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>テスト　DRAW</h1>
+<h1>電卓　INPUT</h1>
 
 
 <section>
-がめんにせんをかいてみよう！
-DRAWコマンドでせんをかくことができるよ
+電卓を作って計算をしよう
+INPUTとPRINTを使うことでできるよ
 <div class=ichigojam>DRAW 1,1,70,70</div>
-２つばしょをしていしてあげよう<br>
-さいしょの1,1でさいしょのばしょ。<br>
-つぎの70,70,でつぎのばしょをしていしよう。
+10 INPUT Aで一つ目の代数を入力するよ<br>
+20 INPUT Bで二つ目の代数を入力するよ<br>
+つぎで四則の計算をするよ
 </section>
     
 
