--- a/ja/AISATSU.html
+++ b/ja/AISATSU.html
@@ -21,7 +21,7 @@ INPUT（インプット）コマンドをつかって、
 <div class=ichigojam>30 IF A<12 PRINT"AM"
 40 IF A>=13 ?"PM"</div>
 ごぜんはAM、ごごはPM。
-にほんは、0~24じ（ごぜん0~12じ、ごご13~24じ）と言うことがあるけど、<br>
+にほんは、0~24じ（ごぜん0~12じ、ごご13~24じ）ということがあるけど、<br>
 えいごでは、AM0~12じ、PM0~12じとひょうきするんだ。ややこしくてごめんね。
 </section>
     
