--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -16,10 +16,15 @@ INPUTとPRINTを使うことでできるよ
 つぎで四則の計算をするよ
 </section>
     
-
 <section>
-ばしょのつぎに0とくわえると、せんをけせるよ。
-<div class=ichigojam>DRAW 1,1,70,70,0</div>
+
+<div class=ichigojam>
+30 C=A+B		
+30 D=A-B		
+40 E=A*B		
+50 F=A/B		
+60 G=A%B
+</div>
 うえのほうのもじがきえたかな？
 </section>
 
