くろいところ

--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -18,8 +18,7 @@ INPUTとPRINTを使うことでできるよ
     
 <section>
 
-<div class=ichigojam>
-30 C=A+B		
+<div class=ichigojam>　30 C=A+B		
 30 D=A-B		
 40 E=A*B		
 50 F=A/B		
