--- a/ja/DRAWFLOWER.html
+++ b/ja/DRAWFLOWER.html
@@ -44,9 +44,9 @@ Bがおおきくなりすぎたり、ちいさくなりすぎないように、X
 
 <section>
 <b>やってみよう！</b><br>
-1. 10番で足す数字をいじって、いろんなかたちの花をつくってみよう<br>
-2. 20,25の数字を変えてみるとなにがおこるかな？<br>
-3. 30番の32や24を変えてみるとなにがおこるかな？<br>
+1. 10ばんでたすすうじをいじって、いろんなかたちのはなをつくってみよう<br>
+2. 20,25のすうじをかえてみるとなにがおこるかな？<br>
+3. 30ばんの32や24をかえてみるとなにがおこるかな？<br>
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="http://ichigojam.net/print/">IchigoJamプリント</a> http://ichigojam.net/print/ 
