--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -18,13 +18,13 @@ INPUTとPRINTを使うことでできるよ
     
 <section>
 
-<div class=ichigojam>　30 C=A+B		
+<div class=ichigojam>30 C=A+B		
 30 D=A-B		
 40 E=A*B		
 50 F=A/B		
 60 G=A%B
 </div>
-うえのほうのもじがきえたかな？
+割り算の計算ではあまりが出ないのであまりの計算もしよう
 </section>
 
 
