--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -10,7 +10,10 @@
 <section>
 電卓を作って計算をしよう
 INPUTとPRINTを使うことでできるよ
-<div class=ichigojam>DRAW 1,1,70,70</div>
+<div class=ichigojam>10 INPUT A
+20 INPUT B   
+    
+</div>
 10 INPUT Aで一つ目の代数を入力するよ<br>
 20 INPUT Bで二つ目の代数を入力するよ<br>
 </section>
