--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -11,9 +11,8 @@
 電卓を作って計算をしよう
 INPUTとPRINTを使うことでできるよ
 <div class=ichigojam>10 INPUT A
-20 INPUT B   
-    
-</div>
+20 INPUT B   </div>
+
 10 INPUT Aで一つ目の代数を入力するよ<br>
 20 INPUT Bで二つ目の代数を入力するよ<br>
 </section>
