--- a/ja/index.html
+++ b/ja/index.html
@@ -23,7 +23,6 @@ body {
 
 <div id="main">
 <section>
-  - <a href=AISATSU.html>えいごであいさつ</a><br>
 プログラミングコース<br>
 - <a href=LED.html>ひかりをあやつる LED</a><br>
 - <a href=WAIT.html>じかんをあやつる WAIT</a><br>
@@ -66,6 +65,7 @@ body {
 えいご コース<br>
 - <a href=A2Z.html>AからZまで、はやうちゲーム</a><br>
 - <a href=ENGNUM.html>えいごのかずをマスターしよう</a><br>
+- <a href=AISATSU.html>えいごのあいさつをマスターしよう</a><br>
 - <a href=TANGO.html>たんごてすと</a><br>
 </section>
 
