--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -19,6 +19,7 @@ INPUTとPRINTを使うことでできるよ
     
 <section>
 
+次で四則計算をするよ    
 <div class=ichigojam>30 C=A+B		
 30 D=A-B		
 40 E=A*B		
@@ -30,7 +31,6 @@ INPUTとPRINTを使うことでできるよ
 
 
 <section>
-つぎで四則の計算をするよ
 <div class=ichigojam>10 FOR I=1TO11 STEP 3:DRAW I,1,i*10,70:NEXT
 </div>
 RUNでじっこうしてみると、どうなるかな？
