--- a/ja/AISATSU.html
+++ b/ja/AISATSU.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>えいごであいさつ IF</title>
+<title>えいごのあいさつをマスターしよう IF</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>えいごであいさつ IF</h1>
+<h1>えいごのあいさつをマスターしよう IF</h1>
 
 
 <section>
