--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -38,8 +38,12 @@ RUNでじっこうしてみると、どうなるかな？
 
 <section>
 FORコマンドをふたつかいて＃をかいてみよう！
-<div class=ichigojam>10 FOR I=1TO10 STEP 3:DRAW I*10,1,10*I,70:NEXT
-20 FOR I=2TO8 STEP 3:DRAW 1,I*5,70,i*5:NEXT</div>
+<div class=ichigojam>70 PRINT C
+80 PRINT D
+90 PRINT E
+100 PRINT F
+110 PRINT G
+</div>
 </section>
 
 
