moonbyul.html → ja/MOONBYUL.html、表示されるように修正

--- a/ja/MOONBYUL.html
+++ b/ja/MOONBYUL.html
@@ -9,7 +9,7 @@
 
 <section>
 着陸のシーンを作る！
-<div class=10 CLS:CLV
+<div class=ichigojam>10 CLS:CLV
 20 X=RND(55)
 30 LOCATE X,85:PRINT CHR$(278)
 40 WAIT 10
