--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -29,21 +29,15 @@ INPUTとPRINTを使うことでできるよ
 割り算の計算ではあまりが出ないのであまりの計算もしよう
 </section>
 
-
 <section>
-<div class=ichigojam>10 FOR I=1TO11 STEP 3:DRAW I,1,i*10,70:NEXT
-</div>
-RUNでじっこうしてみると、どうなるかな？
-</section>
-
-<section>
-FORコマンドをふたつかいて＃をかいてみよう！
+計算けっかを出力しよう
 <div class=ichigojam>70 PRINT C
 80 PRINT D
 90 PRINT E
 100 PRINT F
 110 PRINT G
 </div>
+
 </section>
 
 
