なんとか変更

--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>がめんにいたずらしてみよう！　DRAW</title>
+<title>モールス符号を作りましょう　BEEP</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>がめんにいたずらしてみよう！　DRAW</h1>
+<h1>モールス符号を作りましょう　BEEP</h1>
 
 
 <section>
-がめんにせんをかいてみよう！
-DRAWコマンドでせんをかくことができるよ
-<div class=ichigojam>DRAW 1,1,70,70</div>
-２つばしょをしていしてあげよう<br>
-さいしょの1,1でさいしょのばしょ。<br>
-つぎの70,70,でつぎのばしょをしていしよう。
+<div class=ichigojam>１.　おとを流れてみましょう</div>
+BEEPを書いて、エンターを押します。<br>
+ピッとおとがでていたら、成功です。<br>
+「BEEP＋ENTER」を押してみましょう
+
 </section>
     
 
