--- a/ja/index.html
+++ b/ja/index.html
@@ -24,9 +24,6 @@ body {
 <div id="main">
 <section>
 	
-- <a href=TEST.html>テスト TEST</a><br>
-
-	
 プログラミング コース<br>
 - <a href=LED.html>ひかりをあやつる LED</a><br>
 - <a href=WAIT.html>じかんをあやつる WAIT</a><br>
@@ -113,6 +110,7 @@ body {
 - <a href=NUMTYPE.html>すうじタイピングゲーム</a><br>
 - <a href=WHATDAY.html>なんようびうまれ？</a><br>
 - <a href=FLOPPY.html>FLOPPY BIRD GAME</a><br>
+- <a href=TENKI.html>明日天気になあれ</a><br>
 </section>
 </div>
 
