--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>でんたくを作ろう！　INPUT</title>
+<title>まとめてでんたくを作ろう！　INPUT</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
@@ -8,7 +8,7 @@
 
 
 <section>
-電卓を作って計算をしよう
+まとめて電卓を作って計算をしよう
 INPUTとPRINTを使うことでできるよ
 <div class=ichigojam>10 INPUT A
 20 INPUT B   </div>
