--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -8,26 +8,26 @@
 
 
 <section>
-<div class=ichigojam>１.おとを流れてみましょう</div>
+１.おとを流れてみましょう
+<div class=ichigojam>BEEP+Enter</div>
 BEEPを書いて、エンターを押します。<br>
 ピッとおとがでていたら、成功です。<br>
-「BEEP＋ENTER」を押してみましょう
 
 </section>
     
 
 <section>
-<div class=ichigojam>２.おとの高さを調整してみましょう</div>
-BEEP　５＝たかいおと <br>
+２.おとの高さを調整してみましょう
+<div class=ichigojam>BEEP　５＝たかいおと <br>
 BEEP　２０＝ひくいおと <br>
-BEEP　１０、２０＝ながいおと
+BEEP　１０、２０＝ながいおと</div>
 
 </section>
 
 
 <section>
-<div class=ichigojam>３.モース符号を作ってみましょう</div>
-「SOS」という符号を作ってみましょう。
+３.モース符号を作ってみましょう
+<div class=ichigojam>「SOS」という符号を作ってみましょう。
 SOSのモールス符号は「・・・ーーー・・・」です。
 10　BEEP　10：WAIT　20＋ENTER
 20　BEEP　10：WAIT　20＋ENTER
@@ -37,7 +37,8 @@ SOSのモールス符号は「・・・ーーー・・・」です。
 60　BEEP　10、30：WAIT　40＋ENTER
 70　BEEP　10：WAIT　20＋ENTER
 80　BEEP　10：WAIT　20＋ENTER
-90　BEEP　10：WAIT　20＋ENTER
+90　BEEP　10：WAIT　20＋ENTER</div>
+
 書いたら、SOSのモールス符号ができると思います
     
 </section>
