--- a/ja/index.html
+++ b/ja/index.html
@@ -25,7 +25,7 @@ body {
 <section>
 	
 プログラミング コース<br>
-- <a href=TEST.html>ひかりをあやつる test</a><br>	
+- <a href=TEST.html>モールス符号を作りましょう　BEEP</a><br>	
 - <a href=LED.html>ひかりをあやつる LED</a><br>
 - <a href=WAIT.html>じかんをあやつる WAIT</a><br>
 - <a href=RUN-LIST.html>プログラムのきおく RUN/LIST</a><br>
