--- a/ja/KEISAN.html
+++ b/ja/KEISAN.html
@@ -4,11 +4,11 @@
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>まとめて電卓　INPUT</h1>
+<h1>まとめてでんたく　INPUT</h1>
 
 
 <section>
-まとめて電卓を作って計算をしよう
+まとめてでんたくを作って計算をしよう
 INPUTとPRINTを使うことでできるよ
 <div class=ichigojam>10 INPUT A
 20 INPUT B   </div>
