--- a/ja/KEISAN.html
+++ b/ja/KEISAN.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>まとめてでんたくを作ろう！　INPUT</title>
+<title>まとめてでんたくを作ろう　INPUT</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
