ちゅっと編集

--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -20,24 +20,25 @@ BEEPを書いて、エンターを押します。<br>
 ２.おとの高さを調整してみましょう
 <div class=ichigojam>BEEP　５＝たかいおと <br>
 BEEP　２０＝ひくいおと <br>
-BEEP　１０、２０＝ながいおと</div>
+BEEP　１０,２０＝ながいおと</div>
 
 </section>
 
 
 <section>
 ３.モース符号を作ってみましょう
-<div class=ichigojam>「SOS」という符号を作ってみましょう。
+「SOS」という符号を作ってみましょう。
 SOSのモールス符号は「・・・ーーー・・・」です。
-10　BEEP　10：WAIT　20＋ENTER
-20　BEEP　10：WAIT　20＋ENTER
-30　BEEP　10：WAIT　20＋ENTER
-40　BEEP　10、30：WAIT　40＋ENTER
-50　BEEP　10、30：WAIT　40＋ENTER
-60　BEEP　10、30：WAIT　40＋ENTER
-70　BEEP　10：WAIT　20＋ENTER
-80　BEEP　10：WAIT　20＋ENTER
-90　BEEP　10：WAIT　20＋ENTER</div>
+<div class=ichigojam>
+10　BEEP　10：WAIT　20＋Enter
+20　BEEP　10：WAIT　20＋Enter
+30　BEEP　10：WAIT　20＋Enter
+40　BEEP　10,30：WAIT　40＋Enter
+50　BEEP　10,30：WAIT　40＋Enter
+60　BEEP　10,30：WAIT　40＋Enter
+70　BEEP　10：WAIT　20＋Enter
+80　BEEP　10：WAIT　20＋Enter
+90　BEEP　10：WAIT　20＋Enter</div>
 
 書いたら、SOSのモールス符号ができると思います
     
