--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -26,8 +26,8 @@ BEEP　１０,２０＝ながいおと</div>
 
 
 <section>
-３.モース符号を作ってみましょう
-「SOS」という符号を作ってみましょう。
+３.モース符号を作ってみましょう <br>
+「SOS」という符号を作ってみましょう。<br>
 SOSのモールス符号は「・・・ーーー・・・」です。
 <div class=ichigojam>
 10　BEEP　10：WAIT　20＋Enter
