--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -29,8 +29,7 @@ BEEP　１０,２０＝ながいおと</div>
 ３.モース符号を作ってみましょう <br>
 「SOS」という符号を作ってみましょう。<br>
 SOSのモールス符号は「・・・ーーー・・・」です。
-<div class=ichigojam>
-10　BEEP　10：WAIT　20＋Enter
+<div class=ichigojam>10　BEEP　10：WAIT　20＋Enter
 20　BEEP　10：WAIT　20＋Enter
 30　BEEP　10：WAIT　20＋Enter
 40　BEEP　10,30：WAIT　40＋Enter
