--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -18,8 +18,8 @@ BEEPを書いて、エンターを押します。<br>
 
 <section>
 ２.おとの高さを調整してみましょう
-<div class=ichigojam>BEEP　５＝たかいおと <br>
-BEEP　２０＝ひくいおと <br>
+<div class=ichigojam>BEEP　５＝たかいおと
+BEEP　２０＝ひくいおと 
 BEEP　１０,２０＝ながいおと</div>
 
 </section>
