--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>がめんにいたずらしてみよう！　DRAW</title>
+<title>おとをならす　PLAY</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>がめんにいたずらしてみよう！　DRAW</h1>
+<h1>おとをならそう　PLAY</h1>
 
 
 <section>
-がめんにせんをかいてみよう！
-DRAWコマンドでせんをかくことができるよ
-<div class=ichigojam>DRAW 1,1,70,70</div>
-２つばしょをしていしてあげよう<br>
-さいしょの1,1でさいしょのばしょ。<br>
-つぎの70,70,でつぎのばしょをしていしよう。
+おんがくをつくってみよう！
+<div class=ichigojam>PLAY”CDEFGAFEDC"</div>
+ドレミのうたをつくってみよう<br>
+「PLAY”CDEFGAB”、エンター」でドレミファソラシがなるよ!<br>  
+「PLAY”CDEFGAFEDC"、エンター」をおしてみよう!
 </section>
     
 
@@ -25,16 +24,16 @@ DRAWコマンドでせんをかくことができるよ
 
 
 <section>
-FORコマンドでくりかえしせんをかこう！
-<div class=ichigojam>10 FOR I=1TO11 STEP 3:DRAW I,1,i*10,70:NEXT
-</div>
-RUNでじっこうしてみると、どうなるかな？
+こんどはおとのながさをかえてみよう!
+<div class=ichigojam>PLAY”CDEFG8AFEDC”/div>
+アルファベットのうしろにすうじをいれるとながさをかえられるよ!
 </section>
 
 <section>
-FORコマンドをふたつかいて＃をかいてみよう！
-<div class=ichigojam>10 FOR I=1TO10 STEP 3:DRAW I*10,1,10*I,70:NEXT
-20 FOR I=2TO8 STEP 3:DRAW 1,I*5,70,i*5:NEXT</div>
+テンポをかえてみよう<br>
+テンポ(はやさ)は「T(すうじ)」でかえられるよ!
+<div class=ichigojam>PLAY”T60CDEFG8AFEDC”</div>
+
 </section>
 
 
