--- a/ja/matome.html
+++ b/ja/matome.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
 <title>まとめてでんたくを作ろう　INPUT</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
-
+<script src="ichigojamlist.js"></script>
 </head><body>
 
 <h1>まとめてでんたく　INPUT</h1>
