ひらがなに変更

--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>モールス符号を作りましょう　BEEP</title>
+<title>モールスふごうをつくりましょう　BEEP</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>モールス符号を作りましょう　BEEP</h1>
+<h1>モールスふごうを作りましょう　BEEP</h1>
 
 
 <section>
-１.おとを流れてみましょう
+１.おとをながれてみましょう
 <div class=ichigojam>BEEP+Enter</div>
-BEEPを書いて、エンターを押します。<br>
-ピッとおとがでていたら、成功です。<br>
+BEEPをかいて、エンターをおします。<br>
+ピッとおとがでていたら、せいこうです。<br>
 
 </section>
     
 
 <section>
-２.おとの高さを調整してみましょう
+２.おとのたかさをちょうせいしてみましょう
 <div class=ichigojam>BEEP　５＝たかいおと
 BEEP　２０＝ひくいおと 
 BEEP　１０,２０＝ながいおと</div>
@@ -26,9 +26,9 @@ BEEP　１０,２０＝ながいおと</div>
 
 
 <section>
-３.モース符号を作ってみましょう <br>
-「SOS」という符号を作ってみましょう。<br>
-SOSのモールス符号は「・・・ーーー・・・」です。
+３.モースふごうをつくってみましょう <br>
+「SOS」というふごうをつくってみましょう。<br>
+SOSのモールスふごうは「・・・ーーー・・・」です。
 <div class=ichigojam>10　BEEP　10：WAIT　20＋Enter
 20　BEEP　10：WAIT　20＋Enter
 30　BEEP　10：WAIT　20＋Enter
@@ -39,15 +39,15 @@ SOSのモールス符号は「・・・ーーー・・・」です。
 80　BEEP　10：WAIT　20＋Enter
 90　BEEP　10：WAIT　20＋Enter</div>
 
-書いたら、SOSのモールス符号ができると思います
+かいたら、SOSのモールスふごうができるとおもいます
     
 </section>
 
 
 <section>
 <b>やってみよう！</b><br>
-1.モールス符号の表を調べて、自分の名前を書きましょう。<br>
-2.他のエマージェンシーのモールス符号を作ってみましょう <br>
+1.モールスふごうのひょうをしらべて、じぶんのなまえをかきましょう。<br>
+2.ほかのエマージェンシーのモールスふごうをつくってみましょう <br>
 
 </section>
 
