--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>小室勇人　DRAW</title>
+<title>いちごジャムプリント　DRAW</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>がめんにいたずらしてみよう！　DRAW</h1>
+<h1>ジャンケンをしてみよう！　DRAW</h1>
 
 
 <section>
