--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -18,7 +18,7 @@
     
 <section>
 こんどはおとのながさをかえてみよう!
-<div class=ichigojam>PLAY”CDEFG8AFEDC”
+<div class=ichigojam>PLAY”CDEFG8AFEDC”</div>
 アルファベットのうしろにすうじをいれるとながさをかえられるよ!<br>
 </section>
 
