--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -20,13 +20,14 @@
 こんどはおとのながさをかえてみよう!
 <div class=ichigojam>PLAY”CDEFG8AFEDC”</div>
 アルファベットのうしろにすうじをいれるとながさをかえられるよ!<br>
+おとのながさはかえられたかな
 </section>
 
     
 <section>
-テンポをかえてみよう<br>
-テンポ(はやさ)は「T(すうじ)」でかえられるよ!
+テンポをかえてみよう
 <div class=ichigojam>PLAY”T60CDEFG8AFEDC”</div>
+テンポ(はやさ)は「T(すうじ)」でかえられるよ!<br>
 おんがくのはやさをかえられたかな?<br>
 Rをアルファベットのあいだにいれるとウン（やすみ）になるよ
 </section>
