--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -8,9 +8,9 @@
 
 
 <section>
-がめんにせんをかいてみよう！
-DRAWコマンドでせんをかくことができるよ
-<div class=ichigojam>DRAW 1,1,70,70</div>
+RUNを押したら最初は、グー　ジャンケンポンと表示される。
+    グー、チョキ、パーのどれかがランダムで表示される。
+<div class=ichigojam>10 PRINT”最初は、グー　ジャンケンポン！”</div>
 ２つばしょをしていしてあげよう<br>
 さいしょの1,1でさいしょのばしょ。<br>
 つぎの70,70,でつぎのばしょをしていしよう。
