比較演算子を利用

--- a/ja/AISATSU.html
+++ b/ja/AISATSU.html
@@ -42,16 +42,16 @@ INPUT（インプット）コマンドをつかって、
     
 <section>
 もし、AM0~5じにゲームをしていたとしたら、どうなるかな？
-<div class=ichigojam>70 IF (A=0 OR A=1 OR A=2 OR A=3 OR A=4 OR A=5) ?"HAYAKUNENASAI!"</div>
+<div class=ichigojam>70 IF A>=0 AND A<=5 ?"HAYAKUNENASAI!"</div>
 おこられた！ねます！<br>
 </section>
 
 <section>
 もうひとくふう！えいごであいさつをかこう！
-<div class=ichigojam>80 IF (A=6 OR A=7 OR A=8 OR A=9 OR A=10 OR A=11) AND S=0 ?"GOOD MORNING!"
-90 IF (A=12 OR A=13 OR A=１４ OR A=15 OR A=16 OR A=17) AND S=1 ?"GOOD AFTERNOON！🍙"
-100 IF (A=18 OR A=19 OR A=20) AND S=2 ?"GOOD EVENING:)"
-110 IF (A=21 OR A=22 OR A=23) AND S=3 ?"GOOD NIGHT!🚀"</div>
+<div class=ichigojam>80 IF A>=6 AND A<=11 AND S=0 ?"GOOD MORNING!"
+90 IF A>=12 AND A<=17 AND S=1 ?"GOOD AFTERNOON！🍙"
+100 IF A>=18 AND A<=20 AND S=2 ?"GOOD EVENING:)"
+110 IF A>=21 AND A<=23 AND S=3 ?"GOOD NIGHT!🚀"</div>
    えいごであいさつ、できたかな？<br>
 </section>
 
