おにぎり横のびっくりマーク削除

--- a/ja/AISATSU.html
+++ b/ja/AISATSU.html
@@ -49,7 +49,7 @@ INPUT（インプット）コマンドをつかって、
 <section>
 もうひとくふう！えいごであいさつをかこう！
 <div class=ichigojam>80 IF A>=6 AND A<=11 AND S=0 ?"GOOD MORNING!"
-90 IF A>=12 AND A<=17 AND S=1 ?"GOOD AFTERNOON！🍙"
+90 IF A>=12 AND A<=17 AND S=1 ?"GOOD AFTERNOON🍙"
 100 IF A>=18 AND A<=20 AND S=2 ?"GOOD EVENING:)"
 110 IF A>=21 AND A<=23 AND S=3 ?"GOOD NIGHT!🚀"</div>
    えいごであいさつ、できたかな？<br>
