--- a/ja/AISATSU.html
+++ b/ja/AISATSU.html
@@ -20,8 +20,7 @@ INPUT（インプット）コマンドをつかって、
 ごぜん・ごごをえいごでおしらせしてくれるようにしよう。<br>
 <div class=ichigojam>30 IF A<12 PRINT"AM"
 40 IF A>=13 ?"PM"</div>
-ごぜんはAM、ごごはPM。にほんは、0~24じ（ごぜん0~12じ、ごご13~24じ）ということがあるけど、<br>
-えいごでは、AM0~12じ、PM0~12じとひょうきするんだ。ややこしくてごめんね。
+ごぜんはAM、ごごはPM。にほんは、0~24じ（ごぜん0~12じ、ごご13~24じ）ということがあるけど、えいごでは、AM0~12じ、PM0~12じとひょうきするんだ。ややこしくてごめんね。
 </section>
     
     
