--- a/ja/AISATSU.html
+++ b/ja/AISATSU.html
@@ -32,9 +32,8 @@ INPUT（インプット）コマンドをつかって、
    
     
 <section>
-    かずを、にほんごのあいさつにあてはめよう！
+    かずを、にほんごのあいさつにあてはめよう！　4つにわかれるよ。
 <div class=ichigojam>60 INPUT "0:OHAYOU 1:KONNICHIHA 2:KONBANHA 3:OYASUMI ",S</div>
-いまのじかんにあった、あいさつはえらべた？
 </section>
 
     
@@ -45,12 +44,11 @@ INPUT（インプット）コマンドをつかって、
 </section>
 
 <section>
-もうひとくふう！えいごであいさつをかこう！
+もうひとくふう！えいごであいさつをかこう！できるかな？
 <div class=ichigojam>80 IF A>=6 AND A<=11 AND S=0 ?"GOOD MORNING!"
 90 IF A>=12 AND A<=17 AND S=1 ?"GOOD AFTERNOON🍙"
 100 IF A>=18 AND A<=20 AND S=2 ?"GOOD EVENING:)"
 110 IF A>=21 AND A<=23 AND S=3 ?"GOOD NIGHT!🚀"</div>
-   えいごであいさつ、できたかな？<br>
 </section>
 
 
