にほん”ご”、謝罪文消去、タイム→TIME

--- a/ja/AISATSU.html
+++ b/ja/AISATSU.html
@@ -9,7 +9,7 @@
 
 <section>
 INPUT（インプット）コマンドをつかって、
-じかん（タイム）をにゅうりょくできるようにしよう！
+じかん（TIME）をにゅうりょくできるようにしよう！
 <div class=ichigojam>10 INPUT A
 20 PRINT "TIME:";A</div>
 </section>
@@ -19,7 +19,7 @@ INPUT（インプット）コマンドをつかって、
 ごぜん・ごごをえいごでおしらせしてくれるようにしよう。<br>
 <div class=ichigojam>30 IF A<12 PRINT"AM"
 40 IF A>=13 ?"PM"</div>
-ごぜんはAM、ごごはPM。にほんは、0~24じ（ごぜん0~12じ、ごご13~24じ）ということがあるけど、えいごでは、AM0~12じ、PM0~12じとひょうきするんだ。ややこしくてごめんね。
+ごぜんはAM、ごごはPM。にほんごは、0~24じ（ごぜん0~12じ、ごご13~24じ）だけど、えいごでは、AM0~12じ、PM0~12じとひょうきするんだ。
 </section>
     
     
