--- a/ja/AISATSU.html
+++ b/ja/AISATSU.html
@@ -8,8 +8,7 @@
 
 
 <section>
-INPUT（インプット）コマンドをつかって、
-じかん（TIME）をにゅうりょくできるようにしよう！
+INPUT（インプット）コマンドをつかって、じかん（TIME）をにゅうりょくしよう！
 <div class=ichigojam>10 INPUT A
 20 PRINT "TIME:";A</div>
 </section>
@@ -31,7 +30,8 @@ INPUT（インプット）コマンドをつかって、
    
     
 <section>
-    かずを、にほんごのあいさつにあてはめよう！　4つにわかれるよ。
+    かずを、にほんごのあいさつにあてはめよう！
+    4つにわかれるよ。
 <div class=ichigojam>60 INPUT "0:OHAYOU 1:KONNICHIHA 2:KONBANHA 3:OYASUMI ",S</div>
 </section>
 
