--- a/ja/AISATSU.html
+++ b/ja/AISATSU.html
@@ -8,7 +8,7 @@
 
 
 <section>
-INPUT（インプット）コマンドをつかって、じかん（TIME）をにゅうりょくしよう！
+INPUT（インプット）コマンドをつかって、じかん（TIME）をにゅうりょく！
 <div class=ichigojam>10 INPUT A
 20 PRINT "TIME:";A</div>
 </section>
