Bの初期値を設定

--- a/ja/DRAWFLOWER.html
+++ b/ja/DRAWFLOWER.html
@@ -9,7 +9,7 @@
 
 <section>
 DRAWコマンドでせんをひいて、はなをかいてみよう！
-<div class=ichigojam>5 CLS:X=1:A=0</div>
+<div class=ichigojam>5 CLS:X=1:A=0:B=48</div>
 まずはじゅんびから。<br>
 じっこうするたびにがめんをきれいにして、ついでにへんすうもせっていしよう。<br>
 </section>
