空行を削除してすっきり

--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -8,9 +8,9 @@
 
 
 <section>
-RUNを押したら最初は、グー　ジャンケンポンと表示される。
-    次に何かキーを押すと、グー、チョキ、パーのどれかがランダムで表示される。
-<div class=ichigojam>10 PRINT”サイショハ、グー　ジャンケンポン！”</div>
+RUNを押したら最初は、グー　ジャンケンポンと表示される。<br>
+次に何かキーを押すと、グー、チョキ、パーのどれかがランダムで表示される。
+<div class=ichigojam>10 PRINT"サイショハ、グー　ジャンケンポン！"</div>
 RUNを押すと文字が表示されてる<br>
 </section>
     
@@ -20,9 +20,9 @@ RUNを押すと文字が表示されてる<br>
 <div class=ichigojam>20 IF INKEY()<>0 PRINT"グー”：GOTO60
 30 IF INKEY()<>0 PRINT"チョキ”：GOTO60
 40 IF INKEY()<>0 PRINT"パー”：GOTO60
-   </div>
-    このプログラムでグー、チョキ、パーが表示される様になる。
- 最後に「GOTO60」をつけて、60に戻る様にする。
+</div>
+このプログラムでグー、チョキ、パーが表示される様になる。<br>
+最後に「GOTO60」をつけて、60に戻る様にする。
 </section>
 
 
