タイトル修正とやってみよう追加

--- a/ja/FINGER.html
+++ b/ja/FINGER.html
@@ -4,7 +4,7 @@
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>指スマW</h1>
+<h1>指スマ</h1>
 
 <section>
 指スマを一人でもできるようにします。
@@ -28,6 +28,13 @@ WAITがないと先にCPUの数が見えてしまうので、2秒待ちます。
 </div>
 CPUの出した数字と自分の立てた指の合計が、自分の言った数字になっていれば勝ちです。
 </section>
+    
+<section>
+やってみよう！
+1.自分だけじゃなくCPUも数字を設定できるようにする
+2.数字を入力して勝ち負けの表示を出してもいいかも！
+3.残りの指も残機みたいに表示してもいいかも！
+</section>    
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="http://ichigojam.net/print/">IchigoJamプリント</a> http://ichigojam.net/print/ 
 <a href="http://ichigojam.net/">IchigoJam&reg;jig.jp</a></div>
