--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -1,50 +1,61 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>がめんにいたずらしてみよう！　DRAW</title>
-<link rel="stylesheet" type="text/css" href="ichigojamlist.css">
-<script src="ichigojamlist.js"></script>
+<title>ローマ字のべんきょう！アからンまで、はやうちゲーム</title>
+<link rel="stylesheet" type="text/css" href="ichigojamprint.css">
 </head><body>
 
-<h1>テスト　test</h1>ter
-
-
-<section>
-がめんにせんをかいてみよう！
-DRAWコマンドでせんをかくことができるよ
-<div class=ichigojam>DRAW 1,1,70,70</div>
-２つばしょをしていしてあげよう<br>
-さいしょの1,1でさいしょのばしょ。<br>
-つぎの70,70,でつぎのばしょをしていしよう。
-</section>
-    
+<h1>AからZまで、はやうちゲーム</h1>
 
 <section>
-ばしょのつぎに0とくわえると、せんをけせるよ。
-<div class=ichigojam>DRAW 1,1,70,70,0</div>
-うえのほうのもじがきえたかな？
-</section>
-
-
-<section>
-FORコマンドでくりかえしせんをかこう！
-<div class=ichigojam>10 FOR I=1TO11 STEP 3:DRAW I,1,i*10,70:NEXT
+もじをおおきくしてみよう
+<div class=ichigojam>VIDEO3
 </div>
-RUNでじっこうしてみると、どうなるかな？
 </section>
 
 <section>
-FORコマンドをふたつかいて＃をかいてみよう！
-<div class=ichigojam>10 FOR I=1TO10 STEP 3:DRAW I*10,1,10*I,70:NEXT
-20 FOR I=2TO8 STEP 3:DRAW 1,I*5,70,i*5:NEXT</div>
+AからZまで、なんびょうでうてるか、タイムアタック！
+<div class=ichigojam>10 N=65:CLT
+20 ?CHR$(N);
+30 IF INKEY()!=N GOTO 30
+40 N=N+1:IF N!=91 GOTO 20
+50 ?:?TICK()/60
+</div>
+うちこみおわったら、F5でRUN<br>
+AからZまで、26コ。うったらタイムをびょうでひょうじするよ<br>
+とちゅうでやめるときは、ESC、もういちどちょうせんは、F5
 </section>
 
+<section>
+きわどいあらそい、じかんをこまかくひょうじしたいなら
+<div class=ichigojam>50 T=TICK()
+60 ?:?T/60;".";T/6%10
+</div>
+</section>
+
+<section>
+こもじをひょうじするかいぞうほう
+<div class=ichigojam>20 ?CHR$(N+32);
+</div>
+もじはコンピューターのなかでは、かずでかんりされてるよ
+</section>
+
+<section>
+アルファベットのAは、65
+<div class=ichigojam>?CHR$(65)
+A
+?ASC("A")
+65
+</div>
+</section>
 
 <section>
 <b>やってみよう！</b><br>
-1. STEPのかずをもっとちいさくしてみるとどうなるかな？<br>
-2. DRAWのI*のよこのかずをかえてみよう<br>
-3. くふうしてもじやえをかいてみよう！<br>
+1. A、B、Cと、こえをだしながらやってみよう<br>
+2. じぶんのきろくをメモしよう<br>
+3. なんかいめで、30びょうをきれるかな？<br>
+4. ともだちとヨーイドンでたいせんしてみよう<br>
+5. りょうてをつかったブラインドタッチができるとかっこいい<br>
 </section>
 
-<div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="http://ichigojam.net/print/">IchigoJamプリント</a> http://ichigojam.net/print/ 
+<div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="http://ichigojam.net/print/">IchigoJamプリント</a> http://ichigojam.net/print/
 <a href="http://ichigojam.net/">IchigoJam&reg;jig.jp</a></div>
 </body></html>
