--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>ローマ字のべんきょう！アからンまで、はやうちゲーム</title>
+<title>ローマ字のおべんきょう！
+  アからンまで、はやうちゲーム</title>
 <link rel="stylesheet" type="text/css" href="ichigojamprint.css">
 </head><body>
 
