--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -13,7 +13,7 @@
 </section>
 
 <section>
-AからZまで、なんびょうでうてるか、タイムアタック！
+アからンまで、なんびょうでうてるか、タイムアタック！
 <div class=ichigojam>10 N=177:CLT
 20 ?CHR$(N);
 30 IF INKEY()!=N GOTO 30
@@ -49,14 +49,17 @@ d
 <div class=ichigojam>?ASC（”G")
 71
 </div>
+Gはすうじになおすと71だね！　ほかにもたくさんためしてみよう！
+  
+  なにかすうじともじのあいだにかんけいせいがあるかも！？
 </section>
 
 <section>
 <b>やってみよう！</b><br>
-1. A、B、Cと、こえをだしながらやってみよう<br>
+1. ローマ字をべんきょうしながらやってみよう<br>
 2. じぶんのきろくをメモしよう<br>
-3. なんかいめで、30びょうをきれるかな？<br>
-4. ともだちとヨーイドンでたいせんしてみよう<br>
+3. ともだちとヨーイドンでたいせんしてみよう<br>
+4. コンピューターのなかのすうじともじのかんけいをしらべよう<br>
 5. りょうてをつかったブラインドタッチができるとかっこいい<br>
 </section>
 
