--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -37,7 +37,8 @@
 木に当たり判定をつけたりしよう
 <div class=ichigojam>36 X=X-BTN(28)+BTN(29)
 37 IF SCR(X,5) END
-38 X=(X+30)%30</div>
+38 X=(X+30)%30
+    40 GOTO20</div>
 </section>
 
 
