--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>がめんにいたずらしてみよう！　DRAW</title>
+<title>あててみて！</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>がめんにいたずらしてみよう！　DRAW</h1>
+<h1>あててみて！</h1>
 
 
 <section>
-がめんにせんをかいてみよう！
-DRAWコマンドでせんをかくことができるよ
+あいてがなんのトランプを引いたかあててみよう！
+
 <div class=ichigojam>DRAW 1,1,70,70</div>
-２つばしょをしていしてあげよう<br>
-さいしょの1,1でさいしょのばしょ。<br>
-つぎの70,70,でつぎのばしょをしていしよう。
+まずはどのマークをひいたのかあててみよう。<br>
+１から４のかずをランダムにせってい。<br>
+わかりやすいように１から４のかずにマークをつけてあげよう。
 </section>
     
 
 <section>
-ばしょのつぎに0とくわえると、せんをけせるよ。
 <div class=ichigojam>DRAW 1,1,70,70,0</div>
-うえのほうのもじがきえたかな？
+どんなマーク？
+
+
+    
 </section>
+
 
 
 <section>
