ばん → ぎょう

--- a/ja/DRAWFLOWER.html
+++ b/ja/DRAWFLOWER.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>がめんにいたずらしてみよう！　DRAW</title>
+<title>はすのはなをえがこう！ SIN/COS</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
@@ -44,9 +44,9 @@ Bがおおきくなりすぎたり、ちいさくなりすぎないように、X
 
 <section>
 <b>やってみよう！</b><br>
-1. 10ばんでたすすうじをいじって、いろんなかたちのはなをつくってみよう<br>
-2. 20,25のすうじをかえてみるとなにがおこるかな？<br>
-3. 30ばんの32や24をかえてみるとなにがおこるかな？<br>
+1. 10ぎょうで、たすすうじをいじって、いろんなかたちのはなをつくってみよう<br>
+2. 20,25ぎょうのすうじをかえてみるとなにがおこるかな？<br>
+3. 30ぎょうの32や24をかえてみるとなにがおこるかな？<br>
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="http://ichigojam.net/print/">IchigoJamプリント</a> http://ichigojam.net/print/ 
