--- a/ja/index.html
+++ b/ja/index.html
@@ -23,7 +23,6 @@ body {
 
 <div id="main">
 <section>
-	<a href=DRAWFLOWER.html>はすのはなをえがく</a><br>
 プログラミング コース<br>
 - <a href=LED.html>ひかりをあやつる LED</a><br>
 - <a href=WAIT.html>じかんをあやつる WAIT</a><br>
@@ -45,6 +44,8 @@ body {
 - <a href=PCG.html>オリジナルキャラをつくる PCG</a><br>
 - <a href=LOGIC.html>1たす1は1、ろんりのなぞ</a><br>
 - <a href=LRUN.html>プログラムをつなげる LRUN</a><br>
+- <a href=DRAW.html>がめんにいたずらしてみよう DRAW</a><br>
+- <a href=DRAWFLOWER.html>はすのはなをえがこう SIN/COS</a><br>
 </section>
 
 <section>
