ファイル名英数字に変更、タイトル1行に収まるように変更

--- a/ja/index.html
+++ b/ja/index.html
@@ -72,6 +72,7 @@ body {
 <section>
 こくご コース<br>
 - <a href=ROMAJI.html>ローマじでうつ、カタカナ</a><br>
+- <a href=A2N.html>ローマじ、アからンまではやうちゲーム</a><br>
 </section>
 		
 <section>
