--- a/ja/A2N.html
+++ b/ja/A2N.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>ローマ字のおべんきょう！
-  アからンまで、はやうちゲーム</title>
+<title>ローマじ、アからンまではやうちゲーム</title>
 <link rel="stylesheet" type="text/css" href="ichigojamprint.css">
 </head><body>
 
-<h1>ローマ字のべんきょう！　アからンまで、はやうちゲーム</h1>
+<h1>ローマじ、アからンまではやうちゲーム</h1>
 
 <section>
 もじをおおきくしてみよう
